<resources>
    <string name="app_name">DS20181</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="lbl_sign_up">Chưa có tài khoản? Đăng ký tại đây</string>
    <string name="hint_user_name">Tài khoản</string>
    <string name="hint_user_name_login">Nhập tài khoản</string>
    <string name="hint_name_user"> Tên</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="btn_sign_up">Đăng ký</string>
    <string name="back_login_lbl">Trở về trang Đăng nhập</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cài Đặt</string>
    <string name="last_update">last update 31/10/2018 20:51\nby nguyen van A</string>
    <string name="owner_file">File được chia sẻ</string>
    <string name="creator_file">File của bạn</string>
    <string name="msg_fill_infor">Bạn cần điền đầy đủ thông tin</string>
    <string name="msg_update_success">Cập nhật thành công</string>
    <string name="share_file">Chia sẻ</string>
    <string name="delete_file">Xóa</string>
    <string name="edit_file_lbl">Chỉnh sửa File</string>
    <string name="msg_login_fail">Tài khoản hoặc mật khẩu không chính xác</string>
    <string name="empty_data">Không có dữ liệu</string>
    <string name="retry_lbl">Thử lại</string>
    <string name="text_empty_desc">Không có</string>
    <string name="per_count">Quyền đọc: %d, Quyền chỉnh sửa: %d</string>
    <string name="file_infor_item">Chi tiết</string>
    <string name="time_invalid">Thời gian không hợp lệ</string>
    <string name="format_file_error_msg">File không đúng định dạng!</string>
    <string name="import_file_success">Nhập file ghi âm thành công</string>
    <string name="can_not_delete_file_msg">Bạn không có quyền xóa file này</string>
</resources>
