<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/info_file"
        android:icon="@drawable/ic_info"
        android:title="@string/file_infor_item"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/edit_file"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit_file_lbl"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/share_file"
        android:icon="@drawable/ic_share"
        android:title="@string/share_file"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/delete_ring"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete_file"
        app:showAsAction="ifRoom" />

</menu>